samples/_failures_safe/1761691674_048dc2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91f4d59d.c: In function ‘main’:
./samples/SAFE/__tmp_91f4d59d.c:151:9: error: expected declaration or statement at end of input
  151 |         return EXIT_FAILURE;
      |         ^~~~~~
./samples/SAFE/__tmp_91f4d59d.c:151:9: error: expected declaration or statement at end of input
